--- a/src/main/webapp/WEB-INF/templates/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/dashboard.html
@@ -25,9 +25,8 @@
     <div th:if="${user_authority == 'ROLE_SCHOOL'}">
         <h2>Teacher Dashboard</h2>
         <a href="recruitment/recruitmentList">Check Recruitment Form List</a><br>
-        <a href="">View Event</a><br>
-        <a href="">Function</a><br>
-        <a href="">Function</a><br>
+        <a href="event/admin/view">View Event</a><br>
+        <a href="event/admin/create">Create Event</a><br>
         <br><a href="logout">Logout</a>
     </div>
 
@@ -35,7 +34,7 @@
         <h2>Student Dashboard</h2>
         <a href="recruitment/recruitmentForm">Fill In Recruitment Form</a><br>
         <a href="recruitment/myRecruitments">Check My Recruitment Form</a><br>
-        <a href="">View Event</a><br>
+        <a href="event/view">View Event</a><br>
         <br><a href="logout">Logout</a>
     </div>
 
@@ -46,4 +45,3 @@
     </div>
 </body>
 </html>
-
