--- a/src/main/webapp/WEB-INF/templates/recruitment/myRecruitment.html
+++ b/src/main/webapp/WEB-INF/templates/recruitment/myRecruitment.html
@@ -10,6 +10,9 @@
 
     <!-- Message -->
     <h3 th:text="${message}"></h3>
+    <div th:if="${errorMessage}" class="alert alert-danger">
+	    <p th:text="${errorMessage}"></p>
+	</div>
 
     <!-- Message and list of forms if submissions exist -->
     <div>
